# llm-gateway

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  NOTICE.md  README.md  hacs.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: release.yaml  validate.yaml
custom_components/llm_gateway/: __init__.py  api.py  capabilities.py  capability_executor.py  config_entry.py  config_flow.py  const.py  conversation.py  dialogue.py  feedback.py  first_response.py  first_response_audio.py  grounding.py  harness.py  manifest.json  memory.py  panel.py  policy.py  providers.py  resolution.py  router.py  runtime.py  satellite_diagnostics.py  search.py  static_context.py  (+7 more)
docs/: pipeline-architecture.md  voice-audio-audit-postmarketos-ha-docker.md  voice-feedback-runtime-verification.md
tests/: conftest.py  test_api.py  test_capabilities.py  test_capability_executor.py  test_config_flow.py  test_conversation.py  test_dialogue.py  test_feedback.py  test_first_response.py  test_first_response_audio.py  test_grounding.py  test_harness.py  test_panel.py  test_policy.py  test_providers.py  test_resolution.py  test_router.py  test_satellite_diagnostics.py  test_search.py  test_static_context.py  test_traces.py  test_voice_controls.py  test_voice_runs.py  test_voice_text.py  test_weather_context.py
tools/: voice-harness-ui-fixture.html
tools/ha-earcon/: pyproject.toml
tools/ha-earcon/packs/: ha_voice_minimal_v0.yaml
tools/ha-earcon/src/ha_earcon/: __init__.py  cli.py  loudness.py  manifest.py  synth.py
tools/ha-earcon/tests/: __init__.py  test_synth.py
(+12 files in other folders)
