[project]
name = "llm-gateway"
version = "0.3.25"
description = "OpenAI-compatible LLM conversation agent for Home Assistant"
readme = "README.md"
requires-python = ">=3.14.2,<3.15"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"
dependencies = [
    "mistune>=3,<4",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "hassil==3.7.0",
    "home-assistant-intents==2026.6.1",
    "homeassistant==2026.6.3",
    "pytest-homeassistant-custom-component==0.13.339",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
